--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@formkit/vue": "^1.0.0-beta.11",
     "daisyui": "^2.31.0",
     "theme-change": "^2.2.0",
     "vue": "^3.2.38",
