--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,8 +7,8 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x]
-    
+        node-version: [18.x]
+         #14.x, 16.x, 
     steps:
     - uses: actions/checkout@v3
 
@@ -19,5 +19,6 @@ jobs:
 
     - name: Build
       run: |
-        npm install
-        | echo "🍏 This job's status is ${{ job.status }}."
+        yarm build
+    - name: Finishing and going home
+      run: echo "🍏 This job's status is ${{ job.status }}."
