--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,6 @@ jobs:
       run: yarn
     - name: Build
       run: |
-        npm run build
+        yarm build
     - name: Finishing and going home
       run: echo "🍏 This job's status is ${{ job.status }}."
