--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,5 +21,7 @@ jobs:
     - name: Build
       run: |
         yarn build
+    - name: Testing build
+      run: ls ./dist
     - name: Finishing and going home
       run: echo "🍏 This job's status is ${{ job.status }}."
