--- a/.github/workflows/production-liem-front.yml
+++ b/.github/workflows/production-liem-front.yml
@@ -23,5 +23,12 @@ jobs:
         yarn build
     - name: Testing build
       run: ls ./dist
+      
+    - name: Install SSH Key
+      uses: shimataro/ssh-key-action@v2
+      with:
+        key: ${{ secrets.ORACLEVMPRIV}} 
+    - name: Adding Known Hosts
+      run: ssh-keyscan -H ${{ secrets.SSH_SERVER }} >> ~/.ssh/known_hosts    
     - name: Finishing and going home
       run: echo "🍏 This job's status is ${{ job.status }}."
