--- a/.github/workflows/production-liem-front.yml
+++ b/.github/workflows/production-liem-front.yml
@@ -28,6 +28,7 @@ jobs:
       uses: shimataro/ssh-key-action@v2
       with:
         key: ${{ secrets.ORACLEVMPRIV}} 
+        known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
     - name: Adding Known Hosts
       run: ssh-keyscan -H ${{ secrets.SSH_SERVER }} >> ~/.ssh/known_hosts    
     - name: Finishing and going home
