--- a/.github/workflows/production-liem-front.yml
+++ b/.github/workflows/production-liem-front.yml
@@ -30,6 +30,8 @@ jobs:
         key: ${{ secrets.ORACLEVMPRIV}} 
         known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
     - name: Adding Known Hosts
-      run: ssh-keyscan -H ${{ secrets.SSH_SERVER }} >> ~/.ssh/known_hosts    
+      run: ssh-keyscan -H ${{ secrets.SSH_SERVER }} >> ~/.ssh/known_hosts
+    - name: Deploy with rsync
+      run: rsync -avz ./dist/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_SERVER }}:/home/opc/dist/  
     - name: Finishing and going home
       run: echo "🍏 This job's status is ${{ job.status }}."
