--- a/.github/workflows/production-liem-front.yml
+++ b/.github/workflows/production-liem-front.yml
@@ -32,6 +32,6 @@ jobs:
     - name: Adding Known Hosts
       run: ssh-keyscan -H ${{ secrets.SSH_SERVER }} >> ~/.ssh/known_hosts
     - name: Deploy with rsync
-      run: rsync -avz ./dist/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_SERVER }}:/home/opc/dist/  
+      run: rsync -avz ./dist/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_SERVER }}:/var/www/html/blitzkrieg.jeanpaullopes.pro.br/  
     - name: Finishing and going home
       run: echo "🍏 This job's status is ${{ job.status }}."
